--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@unocss/preset-icons": "^0.45.26",
+    "@unocss/preset-rem-to-px": "^0.45.26",
+    "@unocss/reset": "^0.45.26",
+    "@unocss/transformer-variant-group": "^0.45.26",
     "@vitejs/plugin-react": "^2.0.1",
-    "autoprefixer": "^10.4.8",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -28,11 +31,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.4",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.2",
+    "unocss": "^0.45.26",
     "vite": "^3.0.9"
   }
 }
