--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint \"./src/**/*.{ts,tsx}\" --quiet"
   },
   "dependencies": {
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
