--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactts-start",
+  "name": "started-react-ts",
   "private": true,
   "scripts": {
     "dev": "vite --open",
@@ -11,30 +11,30 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "@unocss/preset-icons": "^0.48.3",
-    "@unocss/preset-rem-to-px": "^0.48.3",
-    "@unocss/reset": "^0.48.3",
-    "@unocss/transformer-variant-group": "^0.48.3",
-    "@vitejs/plugin-react": "^3.0.1",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.26.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "@unocss/preset-icons": "^0.51.4",
+    "@unocss/preset-rem-to-px": "^0.51.4",
+    "@unocss/reset": "^0.51.4",
+    "@unocss/transformer-variant-group": "^0.51.4",
+    "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.2",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "typescript": "^4.9.4",
-    "unocss": "^0.48.3",
-    "vite": "^4.0.4"
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.7",
+    "typescript": "^5.0.4",
+    "unocss": "^0.51.4",
+    "vite": "^4.2.1"
   }
 }
